# relic-hunt

./: README.md  pyproject.toml
src/relic_hunt/: __init__.py  cli.py  game.py
tests/: test_game.py
