[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-relic-hunt"
version = "0.1.0"
description = "A tiny terminal dungeon crawler written in pure Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI" }
]
license = { text = "MIT" }

[project.scripts]
relic-hunt = "relic_hunt.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
